--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,19 @@
       <span id="good-answers">0</span>
     </h2>
 
-    <div id="question"></div>
+    <div id="game-board">
+      <div id="tip"></div>
+      <button id="callToAFriend">Telefon do przyjaciela</button>
+      <button id="halfOnHalf">Pół na pół</button>
+      <button id="questionToTheCrowd">Pytanie do pubiczności</button>
 
-    <button id="answer1" data-answer="0"></button>
-    <button id="answer2" data-answer="1"></button>
-    <button id="answer3" data-answer="2"></button>
-    <button id="answer4" data-answer="3"></button>
+      <div id="question"></div>
+
+      <button id="answer1" data-answer="0"></button>
+      <button id="answer2" data-answer="1"></button>
+      <button id="answer3" data-answer="2"></button>
+      <button id="answer4" data-answer="3"></button>
+    </div>
 
     <script src="script.js"></script>
   </body>
